feat: create boutique page without responsiveness, Did the responsive view for add product pages

--- a/create_boutique_step_1.html
+++ b/create_boutique_step_1.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Supply Apparel | Checkout </title>
+    <title>Supply Apparel</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -18,12 +18,8 @@
                 </a>
                 <div class="auth_section">
                     <a href="#" class="btn_create_boutique">Create a boutique</a>
-
-                    <a href="#" class="btn_auth">User Name</a>
-                    <a href="index.html" class="btn_auth btn_logout">Logout</a>
-
-                    <a href="#" class="btn_auth hidden" data-toggle="modal" data-target="#registerModal">Sign Up</a>
-                    <a href="#" class="btn_auth hidden" data-toggle="modal" data-target="#loginModal">Login</a>
+                    <a href="#" class="btn_auth" data-toggle="modal" data-target="#registerModal">Sign Up</a>
+                    <a href="#" class="btn_auth" data-toggle="modal" data-target="#loginModal">Login</a>
                 </div>
             </div>
         </div>
@@ -59,10 +55,7 @@
                         </ul>
                     </li>
                     <li class="icons"><a href="#"><span class="wishlist_icon" title="Wishlist"></span></a></li>
-                    <li class="icons"><a href="#" class="cart_open_trigger"><span class="cart_icon has_product"
-                                                                                  data-product="1"
-                                                                                  title="Cart"></span></a>
-                    </li>
+                    <li class="icons"><a href="#"><span class="cart_icon" data-product="1" title="Cart"></span></a></li>
                 </ul>
             </div>
             <div class="collapse navbar-collapse" id="website_navbar_collapse">
@@ -87,9 +80,7 @@
                         </ul>
                     </li>
                     <li class="icons"><a href="#"><span class="wishlist_icon" title="Wishlist"></span></a></li>
-                    <li class="icons"><a href="#" class="cart_open_trigger"><span class="cart_icon has_product"
-                                                                                  data-product="1"
-                                                                                  title="Cart"></span></a></li>
+                    <li class="icons"><a href="#"><span class="cart_icon" data-product="1" title="Cart"></span></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-left">
                     <li class="dropdown women_dropdown">
@@ -276,82 +267,91 @@
             </div>
         </div>
     </nav>
-    <div class="cart_block">
-        <div class="container">
-            <div class="cart_modal">
-                <button type="button" class="close" aria-label="Close"><span
-                        aria-hidden="true">&times;</span></button>
-                <div class="cart_header">
-                    <i class="cart fa fa-shopping-cart"></i>
-                </div>
-                <div class="cart_body">
-                    <div class="cart_elements">
-                        <div class="t_head">
-                            <span>Your Order</span>
-                            <span>Price</span>
-                        </div>
-                        <div class="t_body">
-                            <div class="name">
-                                <div class="photo"></div>
-                                <div class="product_name">Hamilton Chic Dress</div>
-                            </div>
-                            <div class="price">$45</div>
-                        </div>
-                        <div class="t_body">
-                            <div class="name">
-                                <div class="photo"></div>
-                                <div class="product_name">Hamilton Chic Dress</div>
-                            </div>
-                            <div class="price">$45</div>
-                        </div>
-                        <div class="t_body">
-                            <div class="name">
-                                <div class="photo"></div>
-                                <div class="product_name">Hamilton Chic Dress</div>
-                            </div>
-                            <div class="price">$45</div>
-                        </div>
-                    </div>
-                    <div class="total_price text-right">Total<span>$70</span></div>
-                </div>
-                <div class="cart_footer">
-                    <a href="#" class="back">
-                        <i class="fa fa-angle-left"></i>
-                        <span>Continue Shopping</span>
-                    </a>
-                    <a href="checkout_step_1.html" class="btn_checkout">Checkout</a>
-                </div>
-            </div>
-        </div>
-    </div>
 </header>
-<main class="checkout checkout_step_3">
+<main class="owner_create_step_1">
     <section class="section_1">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
+                <div class="col-lg-10 col-lg-offset-1 col-md-12 col-sm-offset-0">
                     <div class="row">
-                        <div class="checkout_block">
-                            <div class="checkout_header">
-                                <div class="title">Checkout</div>
-                                <div class="breadcrumb_block">
-                                    <div class="step">Shipping</div>
-                                    >
-                                    <div class="step">Payment Method</div>
-                                    >
-                                    <div class="step active">Cofirmation</div>
+                        <h2>Create a Boutique</h2>
+                        <h5>Sell your product to millions around the world</h5>
+                        <form action="" method="post">
+                            <div class="form-group">
+                                <h3>Boutique type</h3>
+                                <div class="boutique_type_select">
+                                    <input type="hidden" name="boutique_type" id="boutique_type"/>
+                                    <div class="type" data-type="1">Own-label</div>
+                                    <div class="type" data-type="2">Pre-owned</div>
+                                    <div class="type" data-type="3">multi-brand</div>
                                 </div>
-                                <div class="close_button"><span></span></div>
                             </div>
-                            <div class="confirmation_block">
-                                <div class="icon"><span></span></div>
-                                <div class="title">Thank you for shopping</div>
-                                <div class="desc">
-                                    Your order has been sent to the boutique and you should receive a confirmation email
-                                    soon. Once your order has been shipped, you will be sent a tracking number to track
-                                    your order. Continue shopping for the best apparel!
+                            <div class="form-group">
+                                <h3>Product type</h3>
+                                <div class="product_type_select">
+                                    <input type="hidden" name="product_type" id="product_type"/>
+                                    <div class="type" data-type="1"><i class="men"></i>Men</div>
+                                    <div class="type" data-type="2"><i class="women"></i>Women</div>
+                                    <div class="type" data-type="3"><i class="kids"></i>Kids</div>
+                                    <div class="type" data-type="4">All</div>
                                 </div>
-                                <a href="contact_us.html" class="btn_step">Continue</a>
+                            </div>
+                            <div class="form-group">
+                                <h3>your country</h3>
+                                <div class="country_select">
+                                    <i class="icon"></i>
+                                    <select name="country" id="create_boutique_country">
+                                        <option value="1">Moldova</option>
+                                        <option value="2" selected>United States of America</option>
+                                        <option value="3">United Arab Emirates</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <a href="create_boutique_step_2.html" class="btn-step">Continue</a>
+                            <div class="information">
+                                <h5>$2000</h5>
+                                <p>That's how much you can earn every week</p>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section_2">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 col-md-12 col-sm-offset-0">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="information_item">
+                                <div class="icon safety"></div>
+                                <h4>Trust & Safety</h4>
+                                <p>We have your best interest and financial safety in mind so you can sell on our
+                                    marketplace
+                                    effortlessly.</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="information_item">
+                                <div class="icon logistics"></div>
+                                <h4>100% Logistics Assistance</h4>
+                                <p>
+                                    We help you update the logistics of every sale, keeping you and your customers
+                                    informed
+                                    throughout the process.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="information_item">
+                                <div class="icon secure"></div>
+                                <h4>Secure Payments</h4>
+                                <p>
+                                    Every payment made on our platform is secured so you can grow your business while we
+                                    do all
+                                    the heavy lifting.
+                                </p>
                             </div>
                         </div>
                     </div>
