--- a/create_boutique_step_3.html
+++ b/create_boutique_step_3.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Supply Apparel | Checkout </title>
+    <title>Supply Apparel</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="libs/semantic/css/dropdown.min.css">
+    <link rel="stylesheet" href="libs/semantic/css/transition.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -18,12 +20,8 @@
                 </a>
                 <div class="auth_section">
                     <a href="#" class="btn_create_boutique">Create a boutique</a>
-
-                    <a href="#" class="btn_auth">User Name</a>
-                    <a href="index.html" class="btn_auth btn_logout">Logout</a>
-
-                    <a href="#" class="btn_auth hidden" data-toggle="modal" data-target="#registerModal">Sign Up</a>
-                    <a href="#" class="btn_auth hidden" data-toggle="modal" data-target="#loginModal">Login</a>
+                    <a href="#" class="btn_auth" data-toggle="modal" data-target="#registerModal">Sign Up</a>
+                    <a href="#" class="btn_auth" data-toggle="modal" data-target="#loginModal">Login</a>
                 </div>
             </div>
         </div>
@@ -59,10 +57,7 @@
                         </ul>
                     </li>
                     <li class="icons"><a href="#"><span class="wishlist_icon" title="Wishlist"></span></a></li>
-                    <li class="icons"><a href="#" class="cart_open_trigger"><span class="cart_icon has_product"
-                                                                                  data-product="1"
-                                                                                  title="Cart"></span></a>
-                    </li>
+                    <li class="icons"><a href="#"><span class="cart_icon" data-product="1" title="Cart"></span></a></li>
                 </ul>
             </div>
             <div class="collapse navbar-collapse" id="website_navbar_collapse">
@@ -87,9 +82,7 @@
                         </ul>
                     </li>
                     <li class="icons"><a href="#"><span class="wishlist_icon" title="Wishlist"></span></a></li>
-                    <li class="icons"><a href="#" class="cart_open_trigger"><span class="cart_icon has_product"
-                                                                                  data-product="1"
-                                                                                  title="Cart"></span></a></li>
+                    <li class="icons"><a href="#"><span class="cart_icon" data-product="1" title="Cart"></span></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-left">
                     <li class="dropdown women_dropdown">
@@ -276,83 +269,74 @@
             </div>
         </div>
     </nav>
-    <div class="cart_block">
-        <div class="container">
-            <div class="cart_modal">
-                <button type="button" class="close" aria-label="Close"><span
-                        aria-hidden="true">&times;</span></button>
-                <div class="cart_header">
-                    <i class="cart fa fa-shopping-cart"></i>
-                </div>
-                <div class="cart_body">
-                    <div class="cart_elements">
-                        <div class="t_head">
-                            <span>Your Order</span>
-                            <span>Price</span>
-                        </div>
-                        <div class="t_body">
-                            <div class="name">
-                                <div class="photo"></div>
-                                <div class="product_name">Hamilton Chic Dress</div>
-                            </div>
-                            <div class="price">$45</div>
-                        </div>
-                        <div class="t_body">
-                            <div class="name">
-                                <div class="photo"></div>
-                                <div class="product_name">Hamilton Chic Dress</div>
-                            </div>
-                            <div class="price">$45</div>
-                        </div>
-                        <div class="t_body">
-                            <div class="name">
-                                <div class="photo"></div>
-                                <div class="product_name">Hamilton Chic Dress</div>
-                            </div>
-                            <div class="price">$45</div>
-                        </div>
-                    </div>
-                    <div class="total_price text-right">Total<span>$70</span></div>
-                </div>
-                <div class="cart_footer">
-                    <a href="#" class="back">
-                        <i class="fa fa-angle-left"></i>
-                        <span>Continue Shopping</span>
-                    </a>
-                    <a href="checkout_step_1.html" class="btn_checkout">Checkout</a>
-                </div>
-            </div>
-        </div>
-    </div>
 </header>
-<main class="checkout checkout_step_3">
+<main class="owner_create_step_3">
     <section class="section_1">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
+                <div class="col-lg-10 col-lg-offset-1 col-md-12 col-sm-offset-0">
                     <div class="row">
-                        <div class="checkout_block">
-                            <div class="checkout_header">
-                                <div class="title">Checkout</div>
-                                <div class="breadcrumb_block">
-                                    <div class="step">Shipping</div>
-                                    >
-                                    <div class="step">Payment Method</div>
-                                    >
-                                    <div class="step active">Cofirmation</div>
-                                </div>
-                                <div class="close_button"><span></span></div>
+                        <div class="col-md-3 left_bar">
+                            <div class="menu_block">
+                                <div class="item"><span>Profile</span> <i class="icon"></i></div>
+                                <div class="item active"><span>Contact Details</span><i class="icon"></i></div>
                             </div>
-                            <div class="confirmation_block">
-                                <div class="icon"><span></span></div>
-                                <div class="title">Thank you for shopping</div>
-                                <div class="desc">
-                                    Your order has been sent to the boutique and you should receive a confirmation email
-                                    soon. Once your order has been shipped, you will be sent a tracking number to track
-                                    your order. Continue shopping for the best apparel!
-                                </div>
-                                <a href="contact_us.html" class="btn_step">Continue</a>
+                        </div>
+                        <div class="col-md-9 right_bar">
+                            <h2>Your Boutique's Profile</h2>
+                            <h5>Introduce your boutique to our community</h5>
+                            <div class="progress_block">
+                                <span>50% completed</span>
+                                <div class="progress_input step_2"></div>
                             </div>
+                            <form action="" method="post" enctype="multipart/form-data">
+                                <div class="form-group">
+                                    <h3>CONTACT NUMBER</h3>
+                                    <div class="contact_number_block">
+                                        <div class="country_prefix">
+                                            <!--<div class="ui dropdown">-->
+                                                <!--<i class="dropdown icon"></i>-->
+                                                <!--<div class="default text"></div>-->
+                                                <!--<div class="menu">-->
+                                                    <!--<div class="item" data-value="male">Male</div>-->
+                                                    <!--<div class="item" data-value="female">Female</div>-->
+                                                <!--</div>-->
+                                            <!--</div>-->
+                                            <input type="text" name="number_prefix" id="number_prefix"/>
+                                        </div>
+                                        <input type="text" name="contact_number" id="contact_number"
+                                               placeholder="000 - 000 - 0000"/>
+                                    </div>
+                                </div>
+                                <div class="form-group email_block">
+                                    <h3>EMAIL ADDRESS</h3>
+                                    <input type="email" name="email_address" id="email_address" placeholder="boutique@email.com"/>
+                                </div>
+                                <div class="form-group social_block">
+                                    <h3>SOCIAL MEDIA PAGES</h3>
+                                    <div class="social_item">
+                                        <i class="icon fb"></i>
+                                        <input type="text" name="fb_url" id="fb_url"
+                                               placeholder="http://www.facebook.com/"/>
+                                    </div>
+                                    <div class="social_item">
+                                        <i class="icon tw"></i>
+                                        <input type="text" name="tw_url" id="tw_url"
+                                               placeholder="http://www.twitter.com/"/>
+                                    </div>
+                                    <div class="social_item">
+                                        <i class="icon insta"></i>
+                                        <input type="text" name="insta_url" id="insta_url"
+                                               placeholder="http://www.instagram.com/"/>
+                                    </div>
+                                    <div class="social_item">
+                                        <i class="icon pt"></i>
+                                        <input type="text" name="pt_url" id="pt_url"
+                                               placeholder="http://www.pinterest.com/"/>
+                                    </div>
+                                </div>
+                                <a href="create_boutique_step_4.html" class="btn-step">Create your boutique</a>
+                            </form>
                         </div>
                     </div>
                 </div>
