--- a/owner_page_index.html
+++ b/owner_page_index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Supply Apparel</title>
-
-    <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -439,14 +437,14 @@
     <section class="section_1">
         <div class="container">
             <div class="row">
-                <div class="col-md-5 col-md-offset-7">
+                <div class="col-md-5 col-md-offset-7 col-xs-12 col-xs-offset-0">
                     <div class="content_block">
                         <h2>Sell your Products to Millions Around The World</h2>
                         <p>
                             Setup your very own online store in less than a minute and increase your earning potential
                             with our thriving community of buyers.
                         </p>
-                        <a href="#" class="btn_create_boutique">Create A Boutique</a>
+                        <a href="create_boutique_step_1.html" class="btn_create_boutique">Create A Boutique</a>
                     </div>
                 </div>
             </div>
@@ -502,7 +500,7 @@
                 </h5>
                 <div class="col-lg-10 col-lg-offset-1 col-md-12 col-sm-offset-0">
                     <div class="row">
-                        <div class="col-sm-4 item">
+                        <div class="col-md-4 col-sm-6 item">
                             <div class="item_block">
                                 <div class="item_header">
                                     <i class="icon"></i>
@@ -511,7 +509,7 @@
                                 <div class="item_body"></div>
                             </div>
                         </div>
-                        <div class="col-sm-4 item">
+                        <div class="col-md-4  col-sm-6 item">
                             <div class="item_block">
                                 <div class="item_header">
                                     <i class="icon"></i>
@@ -520,7 +518,7 @@
                                 <div class="item_body"></div>
                             </div>
                         </div>
-                        <div class="col-sm-4 item">
+                        <div class="col-md-4 col-sm-6 item">
                             <div class="item_block">
                                 <div class="item_header">
                                     <i class="icon"></i>
@@ -534,7 +532,7 @@
                         <div class="col-sm-12">
                             <div class="big_block">
                                 <h2>Increase your earning potential.</h2>
-                                <a href="#" class="btn_create_boutique">Create A Boutique</a>
+                                <a href="create_boutique_step_1.html" class="btn_create_boutique">Create A Boutique</a>
                                 <div class="icon"></div>
                             </div>
                         </div>
