--- a/create_boutique_step_4.html
+++ b/create_boutique_step_4.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Supply Apparel | Checkout </title>
+    <title>Supply Apparel</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -18,12 +18,8 @@
                 </a>
                 <div class="auth_section">
                     <a href="#" class="btn_create_boutique">Create a boutique</a>
-
-                    <a href="#" class="btn_auth">User Name</a>
-                    <a href="index.html" class="btn_auth btn_logout">Logout</a>
-
-                    <a href="#" class="btn_auth hidden" data-toggle="modal" data-target="#registerModal">Sign Up</a>
-                    <a href="#" class="btn_auth hidden" data-toggle="modal" data-target="#loginModal">Login</a>
+                    <a href="#" class="btn_auth" data-toggle="modal" data-target="#registerModal">Sign Up</a>
+                    <a href="#" class="btn_auth" data-toggle="modal" data-target="#loginModal">Login</a>
                 </div>
             </div>
         </div>
@@ -59,10 +55,7 @@
                         </ul>
                     </li>
                     <li class="icons"><a href="#"><span class="wishlist_icon" title="Wishlist"></span></a></li>
-                    <li class="icons"><a href="#" class="cart_open_trigger"><span class="cart_icon has_product"
-                                                                                  data-product="1"
-                                                                                  title="Cart"></span></a>
-                    </li>
+                    <li class="icons"><a href="#"><span class="cart_icon" data-product="1" title="Cart"></span></a></li>
                 </ul>
             </div>
             <div class="collapse navbar-collapse" id="website_navbar_collapse">
@@ -87,9 +80,7 @@
                         </ul>
                     </li>
                     <li class="icons"><a href="#"><span class="wishlist_icon" title="Wishlist"></span></a></li>
-                    <li class="icons"><a href="#" class="cart_open_trigger"><span class="cart_icon has_product"
-                                                                                  data-product="1"
-                                                                                  title="Cart"></span></a></li>
+                    <li class="icons"><a href="#"><span class="cart_icon" data-product="1" title="Cart"></span></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-left">
                     <li class="dropdown women_dropdown">
@@ -276,82 +267,81 @@
             </div>
         </div>
     </nav>
-    <div class="cart_block">
-        <div class="container">
-            <div class="cart_modal">
-                <button type="button" class="close" aria-label="Close"><span
-                        aria-hidden="true">&times;</span></button>
-                <div class="cart_header">
-                    <i class="cart fa fa-shopping-cart"></i>
-                </div>
-                <div class="cart_body">
-                    <div class="cart_elements">
-                        <div class="t_head">
-                            <span>Your Order</span>
-                            <span>Price</span>
-                        </div>
-                        <div class="t_body">
-                            <div class="name">
-                                <div class="photo"></div>
-                                <div class="product_name">Hamilton Chic Dress</div>
-                            </div>
-                            <div class="price">$45</div>
-                        </div>
-                        <div class="t_body">
-                            <div class="name">
-                                <div class="photo"></div>
-                                <div class="product_name">Hamilton Chic Dress</div>
-                            </div>
-                            <div class="price">$45</div>
-                        </div>
-                        <div class="t_body">
-                            <div class="name">
-                                <div class="photo"></div>
-                                <div class="product_name">Hamilton Chic Dress</div>
-                            </div>
-                            <div class="price">$45</div>
-                        </div>
-                    </div>
-                    <div class="total_price text-right">Total<span>$70</span></div>
-                </div>
-                <div class="cart_footer">
-                    <a href="#" class="back">
-                        <i class="fa fa-angle-left"></i>
-                        <span>Continue Shopping</span>
-                    </a>
-                    <a href="checkout_step_1.html" class="btn_checkout">Checkout</a>
-                </div>
-            </div>
-        </div>
-    </div>
 </header>
-<main class="checkout checkout_step_3">
+<main class="owner_create_step_4">
     <section class="section_1">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
+                <div class="col-lg-10 col-lg-offset-1 col-md-12 col-sm-offset-0">
                     <div class="row">
-                        <div class="checkout_block">
-                            <div class="checkout_header">
-                                <div class="title">Checkout</div>
-                                <div class="breadcrumb_block">
-                                    <div class="step">Shipping</div>
-                                    >
-                                    <div class="step">Payment Method</div>
-                                    >
-                                    <div class="step active">Cofirmation</div>
+                        <h2>Membership Packages</h2>
+                        <h5>You're almost there! Select the package that best suits you setup your boutique</h5>
+                        <div class="col-md-4 col-sm-6 item">
+                            <div class="item_block">
+                                <div class="item_header free">
+                                    Free
                                 </div>
-                                <div class="close_button"><span></span></div>
+                                <div class="item_body">
+                                    <div class="plan_features">
+                                        Unlimited products
+                                    </div>
+                                    <div class="plan_features">
+                                        1 look book
+                                    </div>
+                                    <div class="plan_features">
+                                        9am - 6pm customer support
+                                    </div>
+                                    <div class="plan_features">
+                                        <span>20% commission per purchase</span>
+                                        <a href="owner_boutique_page_empty.html" class="btn-select">Select</a>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="confirmation_block">
-                                <div class="icon"><span></span></div>
-                                <div class="title">Thank you for shopping</div>
-                                <div class="desc">
-                                    Your order has been sent to the boutique and you should receive a confirmation email
-                                    soon. Once your order has been shipped, you will be sent a tracking number to track
-                                    your order. Continue shopping for the best apparel!
+                        </div>
+                        <div class="col-md-4 col-sm-6 item">
+                            <div class="item_block">
+                                <div class="item_header">
+                                    <h3>$10</h3>
+                                    <p>per month</p>
                                 </div>
-                                <a href="contact_us.html" class="btn_step">Continue</a>
+                                <div class="item_body">
+                                    <div class="plan_features">
+                                        Unlimited products
+                                    </div>
+                                    <div class="plan_features">
+                                        3 look books
+                                    </div>
+                                    <div class="plan_features">
+                                        24 x 7 customer support
+                                    </div>
+                                    <div class="plan_features">
+                                        <span>15% commission per purchase</span>
+                                        <a href="#" class="btn-select">Select</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6 item">
+                            <div class="item_block">
+                                <div class="item_header">
+                                    <h3>$30</h3>
+                                    <p>per month</p>
+                                </div>
+                                <div class="item_body">
+                                    <div class="plan_features">
+                                        Unlimited products
+                                    </div>
+                                    <div class="plan_features">
+                                        Unlimited look books
+                                    </div>
+                                    <div class="plan_features">
+                                        24 x 7 customer support
+                                    </div>
+                                    <div class="plan_features">
+                                        <span>0% commission per purchase</span>
+                                        <a href="#" class="btn-select">Select</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
